--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -36,10 +36,13 @@
     <div class="content">
       <h2 class="directory">[% location %]</h2>
       <h1 class="basename">[% basename %]<span class="file-attributes">[% IF is_abstract %]abstract&nbsp; [% END %][% IF is_obsolete %]obsolete&nbsp; [% END %]</span></h1>
+	    [% IF has_categories %]
+	    <p class="small categories">[% strjoin(categories, ', ') %]</p>
+	    [% END %]      
       
       [% IF is_batch %]<span class="file_attribute small">batch file</span>[% END %]
       [% IF has_main_level %]<span class="file_attribute small">includes main-level program</span>[% END %]
-			[% IF is_private %]<span class="file_attribute small">private</span>[% END %]
+	  [% IF is_private %]<span class="file_attribute small">private</span>[% END %]
 			
       [% IF has_comments %]
       <div id="file_comments">
