--- a/idldoc/src/templates/search.tt
+++ b/idldoc/src/templates/search.tt
@@ -57,7 +57,7 @@
 								<label for="routinename">Routine name</label>
 							</td>
 							<td>
-								<input type="text" id="routinename" size="40">
+								<input type="text" name="routinename" id="routinename" size="40">
 							</td>
 						</tr>
 						
@@ -66,7 +66,7 @@
 								<label for="comments">Comments</label>
 							</td>
 							<td>
-								<input type="text" id="comments" size="40">
+								<input type="text" name="comments" id="comments" size="40">
 							</td>
 						</tr>
 
@@ -75,7 +75,7 @@
 								<label for="parameters">Parameters</label>
 							</td>
 							<td>
-								<input type="text" id="parameters" size="40">
+								<input type="text" name="parameters" id="parameters" size="40">
 							</td>
 						</tr>
 
@@ -84,7 +84,7 @@
 								<label for="authors">Authors</label>
 							</td>
 							<td>
-								<input type="text" id="authors" size="40">
+								<input type="text" name="authors" id="authors" size="40">
 							</td>
 						</tr>
 						
