--- a/idldoc/src/templates/header.tt
+++ b/idldoc/src/templates/header.tt
@@ -66,3 +66,7 @@
 [% IF current_template eq 'overview' %]
 <p class="localnavbar smallest">[% IF ~nonavbar %]<a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp;[% END %]<a href="#directories">directories</a> &nbsp;&nbsp;&nbsp; <a href="#statistics">project statistics</a> </p>
 [% END %]
+
+[% IF current_template eq 'search' %]
+<p class="localnavbar smallest">[% IF ~nonavbar %]<a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp;[% END %]</p>
+[% END %]
