--- a/idldoc/src/templates/search.tt
+++ b/idldoc/src/templates/search.tt
@@ -42,7 +42,7 @@
  					<input class="text" name="basicText" size="50"/>&nbsp;<input name="send" type="submit" value="Search" onClick="basicsearch()"/>
  				</form>
  
-       <p class="smaller description">This is an explanation of what the basic search does. Nothing fancy, just searches for files or routines that have the words entered.</p>
+       <p class="smaller description">Comment headers for files and routines are searched for the search terms.</p>
     
       
 			<form name="advancedForm">
