--- a/idldoc/src/templates/libdata.tt
+++ b/idldoc/src/templates/libdata.tt
@@ -1,14 +1,16 @@
 /* Index used for searching */
-/* Fields used 
-/* url, type, name, filename, authors, routine name, comments, parameters, keywords */
+/* 
+   Fields used:
+     url, type, name, filename, authors, routine name, comments, parameters 
+*/
 title = "[% title %]";
 subtitle = "[% subtitle %]";
 libdata = new Array();
 i = 0;
 
 [% FOREACH f IN visible_pro_files %][% SCOPE f %]
-libdata[i++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "", "[% plain_comments %]", "", "");
+libdata[i++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "", "[% plain_comments %]", "");
   [% FOREACH r IN visible_routines %][% SCOPE r %]
-  libdata[i++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "[% name %]", "[% plain_comments %]", "", "");
+  libdata[i++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "[% name %]", "[% plain_comments %]", "");
   [% END %][% END %]
 [% END %][% END %]
