Displaying more information about search results.

--- a/idldoc/src/templates/libdata.tt
+++ b/idldoc/src/templates/libdata.tt
@@ -1,7 +1,8 @@
 /* Index used for searching */
 /* 
    Fields used:
-     url, name, type, filename, authors, routine name, comments, parameters 
+     url, name, type, filename, authors, routine name, comments, parameters,
+     categories, and attributes 
 */
 title = "[% title %]";
 subtitle = "[% subtitle %]";
@@ -9,8 +10,8 @@ libdata = new Array();
 libdataItem = 0;
 
 [% FOREACH f IN visible_pro_files %][% SCOPE f %]
-libdata[libdataItem++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "", "[% plain_comments %]", "");
+libdata[libdataItem++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "", "[% plain_comments %]", "", "[% strjoin(categories, ' ') %]", "");
   [% FOREACH r IN visible_routines %][% SCOPE r %]
-  libdata[libdataItem++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "[% name %]", "[% plain_comments %]", "");
+  libdata[libdataItem++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "[% name %]", "[% plain_comments %]", "", "[% strjoin(categories, ' ') %]", "");
   [% END %][% END %]
 [% END %][% END %]
