Removed categories in advanced search form when there are no categories; improved display of search results.

--- a/idldoc/src/templates/search.tt
+++ b/idldoc/src/templates/search.tt
@@ -85,6 +85,7 @@
 							</td>
 						</tr>
 						
+						[% IF n_categories gt 0 %]
 						<tr>
 							<td>	
 								Categories
@@ -97,7 +98,8 @@
 								[% END %]								
 						  </td>
 						</tr>
-					
+					  [% END %]
+					  
 						<tr>
 							<td></td>
 							<td>
