--- a/idldoc/src/templates/libdata.tt
+++ b/idldoc/src/templates/libdata.tt
@@ -11,10 +11,10 @@ libdataItem = 0;
 
 [% IF n_visible_pro_files %]
 [% FOREACH f IN visible_pro_files %][% SCOPE f %]
-libdata[libdataItem++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "", "[% plain_comments %]", "", "[% strjoin(categories, ' ') %]", "");
+libdata[libdataItem++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "", "[% plain_comments %]", "", "[% strjoin(categories, ' ') %]", "[% plain_attributes %]");
   [% IF n_visible_routines gt 0 %]
   [% FOREACH r IN visible_routines %][% SCOPE r %]
-  libdata[libdataItem++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "[% name %]", "[% plain_comments %]", "", "[% strjoin(categories, ' ') %]", "");
+  libdata[libdataItem++] = new Array("[% index_url %]", "[% index_name %]", "[% index_type %]", "[% file_basename(basename) %]", "[% plain_author %]", "[% name %]", "[% plain_comments %]", "[% plain_parameters %]", "[% strjoin(categories, ' ') %]", "[% plain_attributes %]");
   [% END %][% END %]
   [% END %]
 [% END %][% END %]
