--- a/idldoc/src/templates/help.tt
+++ b/idldoc/src/templates/help.tt
@@ -703,7 +703,7 @@ end</code></p>
 
             <tr>
               <td class="name">required</td>
-              <td><code>in</code></td>
+              <td><code>required</code></td>
               <td>Indicates argument is required.</td>
             </tr>
 
