--- a/idldoc/updates-resources/site.xml.tt
+++ b/idldoc/updates-resources/site.xml.tt
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <site>
-   <description url="http://updates.idldev.com/">
+   <description url="http://updates.idldev.com">
       idldev.com updates
    </description>
    <feature url="features/com.idldev.idl.idldoc.feature_[% version %].jar" id="com.idldev.idl.idldoc.feature" version="[% version %]">
@@ -8,3 +8,4 @@
    </feature>
    <category-def name="Projects" label="IDL code projects"/>
 </site>
+
