--- a/idldoc/updates-resources/features/feature.xml.tt
+++ b/idldoc/updates-resources/features/feature.xml.tt
@@ -21,7 +21,7 @@
       <update label="idldev.com projects" url="http://updates.idldev.com/"/>
    </url>
    
-   <plugin id="com.idldev.idl.idldoc.feature"
+   <plugin id="com.idldev.idl.idldoc"
            download-size="0"
            install-size="0"
            version="[% version %]"
