--- a/idldoc/src/templates/docbook-index.tt
+++ b/idldoc/src/templates/docbook-index.tt
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.4//EN" 
-	  "docbook-xml/docbookx.dtd" [ 
+	      "http://www.oasis-open.org/docbook/xml/4.4/docbookx.dtd" [ 
 <!ENTITY mgalloy "Michael Galloy"> 
 ]>
 
 <book>
   <bookinfo>
     <title>[% title %]</title>
-  <bookinfo>
+  </bookinfo>
     
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="overview.xml"/>
 </book>    
