--- a/idldoc/src/templates/docbook-dir-listing.tt
+++ b/idldoc/src/templates/docbook-dir-listing.tt
@@ -1,11 +1,15 @@
 <?xml version="1.0"?>
 <!DOCTYPE part PUBLIC "-//OASIS//DTD DocBook XML V4.4//EN"
-               "http://www.oasis-open.org/docbook/xml/4.4/docbookx.dtd">
+               "http://www.oasis-open.org/docbook/xml/4.4/docbookx.dtd" [
+[% FOREACH d IN dirs %][% SCOPE d %]
+<!ENTITY [% name %] SYSTEM "[% location %]dir-overview.xml">
+[% END %][% END %]
+]>
 
 <part><title>API</title>
                    
 [% FOREACH d IN dirs %][% SCOPE d %]
-    <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="[% location %]dir-overview.xml"/>
+&[% name %];
 [% END %][% END %]
 
 </part>
